# pegasus

./: .dockerignore  .gitignore  .prettierignore  .vscode  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  Dockerfile.dev  LICENSE  README.md  _run_tests.py  docker-compose.dev-server.yml  docker-compose.dev.yml  docker-compose.override.yml.example  docker-compose.yml  docker-entrypoint.sh  package.json  pnpm-lock.yaml  pyproject.toml  refinement_results.json  start-pegasus.mjs  start-pegasus.sh  vitest.config.ts
.claude/rules/: textual-tui-patterns.md
.github/workflows/: sync-models.yml
.husky/: post-checkout  post-merge  pre-commit
.pegasus/: backlog-plan.json  config.yaml
.pegasus/pipelines/: feature-from-design.yaml  feature.yaml
apps/server/: .env.example  .geminiignore  .gitignore  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.test.json  vitest.config.ts
apps/ui/: .gitignore  eslint.config.mjs  index.html  nginx.conf  package.json  playwright.config.ts  tsconfig.json  vite.config.mts  vitest.config.ts
docs/: UNIFIED_API_KEY_PROFILES.md  add-new-cursor-model.md  auto-mode.md  checkout-branch-pr.md  clean-code.md  context-files-pattern.md  event-system.md  folder-pattern.md  frontend-architecture.md  ideation-system.md  install-fedora.md  llm-shared-packages.md  pipeline-system.md  pr-comment-fix-agent.md  pr-comment-fix-prompt.md  prd-to-features-guide.md  release.md  settings-api-migration.md  terminal-custom-configs-plan.md  terminal.md  worktree-init-script-example.sh  worktree-lifecycle.md
docs/server/: providers.md  route-organization.md  utilities.md
docs/specs/: MVP.spec.md
legacy/: .gitignore  README.md  pyproject.toml
legacy/tests/: __init__.py  conftest.py  (+5 more)
libs/: tsconfig.base.json
perf/: capture-gpu.sh  index.html  merge-gpu.mjs
scripts/: fix-lockfile-urls.mjs  get-claude-token.sh  get-cursor-token.sh  lint-lockfile.mjs
tests/: fakes.py  test_integration.py  test_merge.py  test_models.py  test_runner.py  test_ui.py
(+1612 files in other folders)
